# Racing-Game

./: .gitignore  Makefile.am  README  config.h.in  configure  configure.ac
res/: Makefile.am  car.3DS  car.mtl  car.tga  carC.mtl  carC.tga  carD.mtl  carD.tga  cleanwheel_01.3DS  floor.mtl  floor.tga  texture_.tga  wheel.mtl  wheel.tga
src/: AI_Car.cpp  AI_Car.h  BaseCar.cpp  BaseCar.h  Car.cpp  Car.h  GameStateController.cpp  GameStateController.h  Makefile.am  PlayerCar.cpp  PlayerCar.h  Tire.h  TireRayCast.h  main.cpp  racingGame.h
src/Car/: AI_Car.cpp  AI_Car.h  BaseCar.cpp  BaseCar.h  Car.cpp  Car.h  Makefile.am  PlayerCar.cpp  PlayerCar.h  Tire.cpp  Tire.h
src/Car/Utility/: Makefile.am  Tire.cpp  Tire.h  TireRayCast.cpp  TireRayCast.h
src/lib/: CustomDGRayCastCar.cpp  CustomDGRayCastCar.h  CustomRayCastCar.cpp  CustomRayCastCar.h
