# what flags you want to pass to the C compiler & linker
CFLAGS = -O3 -g -Wall -c -fmessage-length=0
# LDFLAGS =
#
# # this lists the binaries to produce, the (non-PHONY, binary) targets in
builddir = ./build/@PACKAGE@
build_PROGRAMS = RacingGame
RacingGame_SOURCES = \
		racingGame.h \
		GameStateController.h \
		Tire.h \
		TireRayCast.h \
		BaseCar.h \
		Car.h \
		PlayerCar.h \
		AI_Car.h \
		main.cpp \
		GameStateController.cpp \
		Tire.cpp \
		TireRayCast.cpp \
		AI_Car.cpp \
		BaseCar.cpp \
		Car.cpp \
		PlayerCar.cpp \

