# what flags you want to pass to the C compiler & linker
AM_CFLAGS = -O3 -g -Wall -c -fmessage-length=0
# LDFLAGS =
#
# # this lists the binaries to produce, the (non-PHONY, binary) targets in
build_PROGRAMS = RacingGame
RacingGame_SOURCES = \
		AI_Car.cpp \
		BaseCar.cpp \
		Car.cpp \
		PlayerCar.cpp
